--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,32 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://maven.minecraftforge.net/" }
+        maven { url = "https://maven.minecraftforge.net/" }
 		mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
-apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
 version = "${mod_version}"
-group = "com.chaosbuffalo.spartanfire" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "spartanfire"
+group = "com.chaosbuffalo.spartanfire"
+archivesBaseName = "spartanfire_rlcraft"
 
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
 minecraft {
-    mappings channel: 'snapshot', version: '20171003-1.12'
-	
-	runs {
-        client {
-            workingDirectory project.file('run')
+    version = "1.12.2-14.23.5.2838"
+    runDir = "run"
+    mappings = "snapshot_20171003"
 
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-        }
-
-        server {
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-        }
-    }
+    replace "@VERSION@", project.version
+    replaceIn "SpartanFire.java"
 }
 
 repositories {
@@ -58,11 +41,26 @@ repositories {
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
-
-    deobf 'ice-and-fire-dragons:iceandfire:1.7.1:1.12.2'
-    deobf "spartan-weaponry:SpartanWeaponry-1.12.2:beta:1.3.8"
     compile 'ice-and-fire-dragons:iceandfire:1.7.1:1.12.2'
-    compile "spartan-weaponry:SpartanWeaponry-1.12.2:beta:1.3.8"
-    compile "net.ilexiconn:llibrary:1.7.19-1.12.2:dev"
+    compile 'spartan-weaponry:SpartanWeaponry-1.12.2:beta:1.3.8'
+    compile 'net.ilexiconn:llibrary:1.7.19-1.12.2:dev'
+}
+
+processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
+
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+
+        // replace version and mcversion
+        expand 'version':project.version, 'mcversion':project.minecraft.version
+    }
+
+    // copy everything else except the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
 }
