--- a/build.gradle
+++ b/build.gradle
@@ -4,63 +4,56 @@ buildscript {
 		mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-
 
 version = "${mod_version}"
 group = "com.chaosbuffalo.spartanfire"
 archivesBaseName = "spartanfire_rlcraft"
 
-sourceCompatibility = targetCompatibility = '1.8'
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 minecraft {
-    version = "1.12.2-14.23.5.2838"
-    runDir = "run"
-    mappings = "snapshot_20171003"
-
-    replace "@VERSION@", project.version
-    replaceIn "SpartanFire.java"
+    mappings channel: mappings_channel, version: mappings_version
 }
+
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven {
-        name = 'CurseForge'
-        url = 'https://minecraft.curseforge.com/api/maven/'
+        url = "https://www.cursemaven.com"
     }
-    maven { // Tesla
-        name 'MMD'
-        url 'https://maven.mcmoddev.com/'
+    maven {
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+    maven {
+        name = "ModMaven"
+        url = "https://modmaven.dev"
     }
 }
 
 dependencies {
-    compile 'ice-and-fire-dragons:iceandfire:1.7.1:1.12.2'
-    compile 'spartan-weaponry:SpartanWeaponry-1.12.2:beta:1.3.8'
-    compile 'net.ilexiconn:llibrary:1.7.19-1.12.2:dev'
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
+    implementation fg.deobf("curse.maven:llibrary-${llibrary_version}")
+    implementation fg.deobf("curse.maven:icenfire-${icenfire_version}")
+    implementation fg.deobf("curse.maven:spartanweaponry-${spartanweaponry_version}")
+
+    compileOnly fg.deobf("mezz.jei:jei_${minecraft_version}:${jei_version}:api")
+    runtimeOnly fg.deobf("mezz.jei:jei_${minecraft_version}:${jei_version}")
 }
 
 processResources {
-    // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+    inputs.property "mcversion", minecraft_version
 
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+    filesMatching('mcmod.info') {
+        expand 'mod_id': mod_id, 'mod_name': mod_name, 'version': project.version,
+                'mcversion': minecraft_version, 'mod_description': mod_description,
+                'mod_author': mod_author
     }
 }
