--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,18 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+mod_id=spartanfire
+mod_name=Spartan Fire: RLCraft
+mod_version=1.1.0
+mod_author=["Kovak", "Fonnymunkey"]
+mod_description=Adds versions of spartan weaponry's weapons using ice and fire materials, forked for RLCraft.
 
-mc_version=1.12.2
+minecraft_version=1.12.2
 forge_version=14.23.5.2860
-mod_version=1.0.1
+mappings_channel=stable
+mappings_version=39-1.12
+
+llibrary_version=243298:2504999
+icenfire_version=264231:2693547
+spartanweaponry_version=278141:4393116
+jei_version=4.16.1.302
+
+org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx3G
