--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ mappings_version=39-1.12
 llibrary_version=243298:2504999
 icenfire_version=888556:4747488
 spartanweaponry_version=278141:5564836
+rlcombat_version=711714:4373489
 jei_version=4.16.1.302
 
 org.gradle.daemon=false
